--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,12 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.api-client:google-api-client:1.25.0'
         
 
         // NOTE: Do not place your application dependencies here; they belong
