--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.5'
 //    implementation 'com.google.android.gms:play-services:12.0.1'
     implementation 'com.google.android.gms:play-services-vision:17.0.2'
+    implementation 'org.tensorflow:tensorflow-android:1.2.0-rc0'
 }
 apply plugin: 'com.google.gms.google-services'
