--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity android:name=".InsectSpeciesList" />
         <activity android:name=".InsectInformation" />
         <activity android:name=".UserProfile" />
-        <activity android:name=".Settings"></activity>
+        <activity android:name=".Settings" />
+        <activity android:name=".About"></activity>
     </application>
 
 </manifest>
