Please clone your project from this version.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,9 +19,6 @@
             android:name="com.google.android.gms.vision"
             android:value="@integer/google_play_services_version" />
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/VisionAPI_KEY" />
-        <meta-data
             android:name="com.google.android.gms.vision.DEPENDENCIES"
             android:value="ocr" />
 
@@ -41,12 +38,12 @@
         <activity android:name=".InsectScan" />
         <activity android:name=".Result" />
         <activity android:name=".ResultPerInsect" />
-        <activity android:name=".InsectFamilyList" />
-        <activity android:name=".InsectSpeciesList" />
         <activity android:name=".InsectInformation" />
         <activity android:name=".UserProfile" />
         <activity android:name=".Settings" />
-        <activity android:name=".About"></activity>
+        <activity android:name=".About" />
+        <activity android:name=".InsectSpeciesList" />
+        <activity android:name=".InsectFamilyList"></activity>
     </application>
 
 </manifest>
