All functions from dashboard connected.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.adefault.byteme"
-        minSdkVersion 15
+        applicationId "com.example.adefault.bytemeAPP"
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -20,7 +20,13 @@ android {
 
         packagingOptions {
             exclude 'META-INF/INDEX.LIST'
+            exclude 'META-INF/DEPENDENCIES'
+            exclude 'META-INF/io.netty.versions.properties'
         }
+    }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 }
 
@@ -32,9 +38,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.firebase:firebase-database:16.0.6'
-    implementation 'com.google.firebase:firebase-core:16.0.7'
+
     implementation 'com.google.cloud:google-cloud-automl:0.55.1-beta'
     implementation 'io.grpc:grpc-okhttp:1.16.1'
     implementation 'com.android.support:multidex:1.0.3'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.google.firebase:firebase-admin:6.7.0'
+
+    annotationProcessor 'com.google.auto.value:auto-value:1.4'
 }
+
