--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
             exclude 'META-INF/INDEX.LIST'
             exclude 'META-INF/DEPENDENCIES'
             exclude 'META-INF/io.netty.versions.properties'
+            exclude 'com.google.firebase.FirebaseException'
         }
     }
     compileOptions {
@@ -39,13 +40,21 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //AUTOML
     implementation 'com.google.cloud:google-cloud-automl:0.55.1-beta'
     implementation 'io.grpc:grpc-okhttp:1.16.1'
     implementation 'com.android.support:multidex:1.0.3'
 
+    //FIREBASE
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.google.firebase:firebase-admin:6.7.0'
 
+    //DONT LABOT2
     annotationProcessor 'com.google.auto.value:auto-value:1.4'
+
+    //MAPS
+//    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+//    implementation 'com.google.android.gms:play-services-location:16.0.0'
+
 }
 
