--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.adefault.bytemeAPP">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -13,12 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <!--<meta-data-->
-            <!--android:name="com.google.android.gms.vision"-->
-            <!--android:value="@integer/google_play_services_version" />-->
-        <!--<meta-data-->
-            <!--android:name="com.google.android.gms.vision.DEPENDENCIES"-->
-            <!--android:value="ocr" />-->
+
 
         <activity android:name=".Login">
             <intent-filter>
@@ -41,7 +37,7 @@
         <activity android:name=".Settings" />
         <activity android:name=".About" />
         <activity android:name=".InsectSpeciesList" />
-        <activity android:name=".InsectFamilyList"></activity>
+        <activity android:name=".InsectFamilyList"/>
     </application>
 
 </manifest>
