Scanner, List, and Maps integrated.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
 
         <activity android:name=".Login">
             <intent-filter>
@@ -36,6 +40,7 @@
         <activity android:name=".UserProfile" />
         <activity android:name=".Settings" />
         <activity android:name=".About" />
+        <activity android:name=".MapsActivity"/>
         <activity android:name=".InsectSpeciesList" />
         <activity android:name=".InsectFamilyList"/>
     </application>
