--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,20 +47,20 @@ dependencies {
 
     //FIREBASE
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.firebase:firebase-admin:6.7.0'
+//    implementation 'com.google.firebase:firebase-admin:6.7.0'
+    implementation 'com.google.firebase:firebase-database:16.0.6'
+
+    //MAPS
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 
     //DONT LABOT2
-    annotationProcessor 'com.google.auto.value:auto-value:1.4'
+    annotationProcessor 'com.google.auto.value:auto-value:1.5.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'de.hdodenhof:circleimageview:2.0.0'
     implementation 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:cardview-v7:28.0.0'
-
-    //MAPS
-//    implementation 'com.google.android.gms:play-services-maps:16.1.0'
-//    implementation 'com.google.android.gms:play-services-location:16.0.0'
-
 }
 
