--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -47,7 +48,6 @@ dependencies {
 
     //FIREBASE
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-//    implementation 'com.google.firebase:firebase-admin:6.7.0'
     implementation 'com.google.firebase:firebase-database:16.0.6'
 
     //MAPS
@@ -63,4 +63,3 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:cardview-v7:28.0.0'
 }
-
