--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    //ADS
+    implementation 'com.google.android.gms:play-services-ads:17.1.3'
 }
