--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logobyteme"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logobyteme"
         android:supportsRtl="true"
@@ -53,11 +53,6 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity
-            android:name=".NavDrawer"
-            android:label="@string/title_activity_nav_drawer"
-            android:theme="@style/AppTheme" />
-        <activity android:name=".SplashScreen" />
         <activity android:name=".Home"></activity>
     </application>
 
