--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.google.gms.google-services'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.adefault.bytemeAPP"
+        applicationId "com.example.adefault.bytemeV3"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
