--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,19 +24,19 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Login">
+        <activity android:name=".Login"/>
+        <activity android:name=".SignUp" />
+        <activity android:name=".Dashboard" />
+        <activity android:name=".ScanModeForm" />
+        <activity android:name=".BiteScanInput" />
+        <activity android:name=".BiteMarkScan" />
+        <activity android:name=".InsectScanInput">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SignUp" />
-        <activity android:name=".Dashboard" />
-        <activity android:name=".ScanModeForm" />
-        <activity android:name=".BiteScanInput" />
-        <activity android:name=".BiteMarkScan" />
-        <activity android:name=".InsectScanInput" />
         <activity android:name=".InsectScan" />
         <activity android:name=".Result" />
         <activity android:name=".ResultPerInsect" />
@@ -55,7 +55,6 @@
             android:label="@string/title_activity_nav_drawer"
             android:theme="@style/AppTheme" />
         <activity android:name=".SplashScreen">
-
         </activity>
         <activity android:name=".Home"></activity>
     </application>
