--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,13 +30,7 @@
         <activity android:name=".ScanModeForm" />
         <activity android:name=".BiteScanInput" />
         <activity android:name=".BiteMarkScan" />
-        <activity android:name=".InsectScanInput">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".InsectScanInput"/>
         <activity android:name=".InsectScan" />
         <activity android:name=".Result" />
         <activity android:name=".ResultPerInsect" />
@@ -55,6 +49,11 @@
             android:label="@string/title_activity_nav_drawer"
             android:theme="@style/AppTheme" />
         <activity android:name=".SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".Home"></activity>
     </application>
