--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
 
     //FIREBASE
     implementation 'com.android.support:recyclerview-v7:28.0.0'
-    implementation 'com.google.firebase:firebase-database:16.0.6'
+    implementation 'com.google.firebase:firebase-database:16.1.0'
     implementation 'com.google.firebase:firebase-core:16.0.7'
 
     //MAPS
@@ -67,4 +67,11 @@ dependencies {
 
     //ADS
     implementation 'com.google.android.gms:play-services-ads:17.1.3'
+
+    //Google Login
+    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+
+    ///glide github
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
