--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,11 @@
             android:value="ca-app-pub-3940256099942544~3347511713" />
 
         <activity android:name=".SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".Login" />
         <activity
@@ -38,20 +42,14 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".Home" />
         <activity android:name=".SignUp" />
-        <activity android:name=".ScanModeForm" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ScanModeForm" />
         <activity android:name=".BiteScanInput" />
         <activity android:name=".InsectScanInput" />
         <activity android:name=".Result" />
         <activity android:name=".Treatment" />
         <activity android:name=".Settings" />
         <activity android:name=".About" />
-        <activity android:name=".InsectFamilyList" />
+        <activity android:name=".InsectFamilyList"/>
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
